[package]
name = "fake-axum"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower = { version = "0.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
axum = {version="0.3.1",features=["headers"]}
tracing = "0.1.29"
tracing-subscriber = "0.3.1"
serde = {version="1.0.130",features=["derive"]}
serde_json = "1.0.69"
headers = "0.3.5"
jsonwebtoken = "7.2.0"
once_cell = "1.8.0"
