[package]
name = "url-shorten-axum"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = "0.4"
tokio = {version = "1.12", "features"=["full"]}
tower = {version = "0.4", features=["util","timeout"]}
tower-http = {version = "0.1", features=["add-extension","trace"]}
uuid = {version = "0.8", features=["serde","v4"]}

sqlx = {version = "0.5.6", optional=true}
serde = {version = "1.0", features=["derive"]}
base64 = "0.13.0"
redis = "0.21.4"


[features]
default = ["postgres"]
mysql = ["sqlx","sqlx/mysql", "sqlx/runtime-tokio-rustls"]
postgres = ["sqlx","sqlx/postgres", "sqlx/runtime-tokio-rustls"]
